--- a/system/UImain.ui
+++ b/system/UImain.ui
@@ -11,7 +11,7 @@
             </rect>
         </property>
         <property name="windowTitle">
-            <string>MainWindow</string>
+            <string>登录</string>
         </property>
         <widget class="QWidget" name="centralwidget">
             <widget class="QLabel" name="label_3">
@@ -124,6 +124,19 @@
                         <width>241</width>
                         <height>31</height>
                     </rect>
+                </property>
+            </widget>
+            <widget class="QLabel" name="label_4">
+                <property name="geometry">
+                    <rect>
+                        <x>160</x>
+                        <y>350</y>
+                        <width>121</width>
+                        <height>21</height>
+                    </rect>
+                </property>
+                <property name="text">
+                    <string>由沈星宇开发的系统</string>
                 </property>
             </widget>
         </widget>
